// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`geosearch returns the right object 1`] = `
{
  "bbox": [
    -74.005933,
    40.712737,
    -74.005933,
    40.712737,
  ],
  "features": [
    {
      "geometry": {
        "coordinates": [
          -74.005933,
          40.712737,
        ],
        "type": "Point",
      },
      "properties": {
        "accuracy": "point",
        "addendum": {
          "pad": {
            "bbl": "1001220001",
            "bin": "1079147",
            "version": "26a",
          },
        },
        "borough": "Manhattan",
        "borough_gid": "whosonfirst:borough:421205771",
        "confidence": 0.9,
        "country": "United States",
        "country_a": "USA",
        "country_code": "US",
        "country_gid": "whosonfirst:country:85633793",
        "county": "New York County",
        "county_gid": "whosonfirst:county:102081863",
        "distance": 0.009,
        "gid": "nycpad:venue:8852",
        "housenumber": "254",
        "id": "8852",
        "label": "254 B'WAY, New York, NY, USA",
        "layer": "venue",
        "locality": "New York",
        "locality_a": "NYC",
        "locality_gid": "whosonfirst:locality:85977539",
        "name": "254 B'WAY",
        "neighbourhood": "City Hall Area",
        "neighbourhood_gid": "whosonfirst:neighbourhood:85865569",
        "postalcode": "10007",
        "region": "New York",
        "region_a": "NY",
        "region_gid": "whosonfirst:region:85688543",
        "source": "nycpad",
        "source_id": "8852",
        "street": "B'WAY",
      },
      "type": "Feature",
    },
  ],
  "geocoding": {
    "attribution": "http://geosearch.planninglabs.nyc/attribution",
    "engine": {
      "author": "Mapzen",
      "name": "Pelias",
      "version": "1.0",
    },
    "query": {
      "boundary.circle.lat": 40.7128,
      "boundary.circle.lon": -74.006,
      "lang": {
        "defaulted": true,
        "iso6391": "en",
        "iso6393": "eng",
        "name": "English",
        "via": "default",
      },
      "point.lat": 40.7128,
      "point.lon": -74.006,
      "private": false,
      "querySize": 2,
      "size": 1,
    },
    "timestamp": "RESET BY SNAPSHOT TEST, WOULD BE A NUMBER LIKE \`1785874040249\`",
    "version": "0.2",
  },
  "type": "FeatureCollection",
}
`;

exports[`geosearch returns the right object around 3521 Riverdale Ave, The Bronx, NY 10463 1`] = `
{
  "bbox": [
    -73.910666,
    40.880971,
    -73.910666,
    40.880971,
  ],
  "features": [
    {
      "geometry": {
        "coordinates": [
          -73.910666,
          40.880971,
        ],
        "type": "Point",
      },
      "properties": {
        "accuracy": "point",
        "addendum": {
          "pad": {
            "bbl": "2057380353",
            "bin": "2093894",
            "version": "26a",
          },
        },
        "borough": "Bronx",
        "borough_gid": "whosonfirst:borough:421205773",
        "confidence": 0.8,
        "country": "United States",
        "country_a": "USA",
        "country_code": "US",
        "country_gid": "whosonfirst:country:85633793",
        "county": "Bronx County",
        "county_a": "BX",
        "county_gid": "whosonfirst:county:102083063",
        "distance": 0.04,
        "gid": "nycpad:venue:696541",
        "housenumber": "3017",
        "id": "696541",
        "label": "3017 RIVERDALE AVENUE, Bronx, NY, USA",
        "layer": "venue",
        "locality": "New York",
        "locality_a": "NYC",
        "locality_gid": "whosonfirst:locality:85977539",
        "name": "3017 RIVERDALE AVENUE",
        "neighbourhood": "Kingsbridge",
        "neighbourhood_gid": "whosonfirst:neighbourhood:85869385",
        "postalcode": "10463",
        "region": "New York",
        "region_a": "NY",
        "region_gid": "whosonfirst:region:85688543",
        "source": "nycpad",
        "source_id": "696541",
        "street": "RIVERDALE AVENUE",
      },
      "type": "Feature",
    },
  ],
  "geocoding": {
    "attribution": "http://geosearch.planninglabs.nyc/attribution",
    "engine": {
      "author": "Mapzen",
      "name": "Pelias",
      "version": "1.0",
    },
    "query": {
      "boundary.circle.lat": 40.88067222222222,
      "boundary.circle.lon": -73.91039722222223,
      "lang": {
        "defaulted": true,
        "iso6391": "en",
        "iso6393": "eng",
        "name": "English",
        "via": "default",
      },
      "point.lat": 40.88067222222222,
      "point.lon": -73.91039722222223,
      "private": false,
      "querySize": 2,
      "size": 1,
    },
    "timestamp": "RESET BY SNAPSHOT TEST, WOULD BE A NUMBER LIKE \`1785874040249\`",
    "version": "0.2",
  },
  "type": "FeatureCollection",
}
`;

exports[`geosearch returns the right object around the Empire State Building 1`] = `
{
  "bbox": [
    -73.984937,
    40.748881,
    -73.984937,
    40.748881,
  ],
  "features": [
    {
      "geometry": {
        "coordinates": [
          -73.984937,
          40.748881,
        ],
        "type": "Point",
      },
      "properties": {
        "accuracy": "point",
        "addendum": {
          "pad": {
            "bbl": "1008360033",
            "bin": "1015876",
            "version": "26a",
          },
        },
        "borough": "Manhattan",
        "borough_gid": "whosonfirst:borough:421205771",
        "confidence": 0.8,
        "country": "United States",
        "country_a": "USA",
        "country_code": "US",
        "country_gid": "whosonfirst:country:85633793",
        "county": "New York County",
        "county_gid": "whosonfirst:county:102081863",
        "distance": 0.042,
        "gid": "nycpad:venue:88725",
        "housenumber": "1",
        "id": "88725",
        "label": "1 WEST 34 STREET, New York, NY, USA",
        "layer": "venue",
        "locality": "New York",
        "locality_a": "NYC",
        "locality_gid": "whosonfirst:locality:85977539",
        "name": "1 WEST 34 STREET",
        "neighbourhood": "Midtown West",
        "neighbourhood_gid": "whosonfirst:neighbourhood:85882233",
        "postalcode": "10001",
        "region": "New York",
        "region_a": "NY",
        "region_gid": "whosonfirst:region:85688543",
        "source": "nycpad",
        "source_id": "88725",
        "street": "WEST 34 STREET",
      },
      "type": "Feature",
    },
  ],
  "geocoding": {
    "attribution": "http://geosearch.planninglabs.nyc/attribution",
    "engine": {
      "author": "Mapzen",
      "name": "Pelias",
      "version": "1.0",
    },
    "query": {
      "boundary.circle.lat": 40.748817,
      "boundary.circle.lon": -73.985428,
      "lang": {
        "defaulted": true,
        "iso6391": "en",
        "iso6393": "eng",
        "name": "English",
        "via": "default",
      },
      "point.lat": 40.748817,
      "point.lon": -73.985428,
      "private": false,
      "querySize": 2,
      "size": 1,
    },
    "timestamp": "RESET BY SNAPSHOT TEST, WOULD BE A NUMBER LIKE \`1785874040249\`",
    "version": "0.2",
  },
  "type": "FeatureCollection",
}
`;

exports[`geosearch returns the right object for string lat/long 1`] = `
{
  "bbox": [
    -74.005933,
    40.712737,
    -74.005933,
    40.712737,
  ],
  "features": [
    {
      "geometry": {
        "coordinates": [
          -74.005933,
          40.712737,
        ],
        "type": "Point",
      },
      "properties": {
        "accuracy": "point",
        "addendum": {
          "pad": {
            "bbl": "1001220001",
            "bin": "1079147",
            "version": "26a",
          },
        },
        "borough": "Manhattan",
        "borough_gid": "whosonfirst:borough:421205771",
        "confidence": 0.9,
        "country": "United States",
        "country_a": "USA",
        "country_code": "US",
        "country_gid": "whosonfirst:country:85633793",
        "county": "New York County",
        "county_gid": "whosonfirst:county:102081863",
        "distance": 0.009,
        "gid": "nycpad:venue:8852",
        "housenumber": "254",
        "id": "8852",
        "label": "254 B'WAY, New York, NY, USA",
        "layer": "venue",
        "locality": "New York",
        "locality_a": "NYC",
        "locality_gid": "whosonfirst:locality:85977539",
        "name": "254 B'WAY",
        "neighbourhood": "City Hall Area",
        "neighbourhood_gid": "whosonfirst:neighbourhood:85865569",
        "postalcode": "10007",
        "region": "New York",
        "region_a": "NY",
        "region_gid": "whosonfirst:region:85688543",
        "source": "nycpad",
        "source_id": "8852",
        "street": "B'WAY",
      },
      "type": "Feature",
    },
  ],
  "geocoding": {
    "attribution": "http://geosearch.planninglabs.nyc/attribution",
    "engine": {
      "author": "Mapzen",
      "name": "Pelias",
      "version": "1.0",
    },
    "query": {
      "boundary.circle.lat": 40.7128,
      "boundary.circle.lon": -74.006,
      "lang": {
        "defaulted": true,
        "iso6391": "en",
        "iso6393": "eng",
        "name": "English",
        "via": "default",
      },
      "point.lat": 40.7128,
      "point.lon": -74.006,
      "private": false,
      "querySize": 2,
      "size": 1,
    },
    "timestamp": "RESET BY SNAPSHOT TEST, WOULD BE A NUMBER LIKE \`1785874040249\`",
    "version": "0.2",
  },
  "type": "FeatureCollection",
}
`;
